--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,1 @@
-{
-  "functions": {
-    "api/football-data/[...path].js": {
-      "runtime": "nodejs20.x@1.0.0"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/football-data/:path*",
-      "destination": "/api/football-data/:path*"
-    }
-  ]
-}
-
+{"rewrites": [{"source": "/api/football-data/:path*", "destination": "/api/football-data/:path*"}]}
